Update title to LC FAIR Data and Software

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "lc"
 
 # Overall title for pages.
-title: "Findable, Accessible, Interoperable, and Reusable (FAIR) Data for Librarians"
+title: "Library Carpentry: Findable, Accessible, Interoperable, and Reusable (FAIR) Data and Software"
 
 
 #------------------------------------------------------------
